# simple-proxy-server

./: Cargo.toml  blacklist.txt  keywords.txt
src/: blacklist.txt  keywords.txt  main.rs
src/proxy/: handlers.rs
